# email-generation-assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: scenarios.json
docs/: DEVLOG.md
report/: REPORT.md
results/: results.json  scores.csv
src/email_assistant/: __init__.py  app.py  cli.py  config.py  evaluate.py  generator.py  metrics.py  models.py  prompts.py  vars.py
tests/: test_generator.py  test_metrics.py
