[project]
name = "email-generation-assistant"
version = "0.1.0"
description = "LLM-powered professional email generation with advanced prompt engineering, custom evaluation metrics, and cross-provider model comparison."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Optional Streamlit demo UI (`make app`); kept out of the core install.
demo = ["streamlit>=1.40"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_assistant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear, flake8-simplify
select = ["E", "F", "I", "UP", "B", "SIM"]
# Line width is governed by the formatter; prompt string literals contain
# intentionally long prose lines that should not be hard-wrapped.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
